Fixed Gap Between Hero And Footer Components

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -11,6 +11,7 @@
         display: flex;
     }
     &__svg-container {
+        margin-top: -1px;
         display: inline-block;
         position: relative;
         width: 100%;
