--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -50,7 +50,7 @@
         color: #fcd729;
         font-size: 26px;
         text-align: center;
-        margin: 0;
+        margin: -1px 0px;
         padding: 0px 16px;
         padding-bottom: 16px;
         @include tablet {
